@@ -1,3 +1,8 @@
+2019-10-22  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/92173
+	* gcc.dg/torture/pr92173.c: New testcase.
+
 2019-10-22  Richard Sandiford  <richard.sandiford@arm.com>
 
 	* g++.dg/diagnostic/aka5.h: New test.
